# My_Project

./: .gitignore  CMakeLists.txt  Copilot-local.py  Copilot-server.py  Copilot.py  Date.cpp  Date.h  MainWindow.cpp  MainWindow.h  MyClass.cpp  MyClass.h  Run-on-Server.py  UI-verbesserung-Anforderung.txt  Uhr.cpp  Uhr.h  datehandler.cpp  datehandler.h  main.cpp  resources.qrc
qml/: Date.qml  InputRow.qml  ListViewDelegate.qml  Main.qml  Uhr.qml
